--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 	</style>
 	<title>Game Template | ArjhanToteck</title>
 	<link rel="icon" href="/favicon.png">
-	<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="https://arjhantoteck.vercel.app/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
 
 <script>
 	// enter your own server address here
-	const server = "online-game-server-template.arjhantoteck.repl.co";
+	const server = "Blackjack-Online.arjhantoteck.repl.co";
 	let password;
 	let gameCode;
 	let connection;
