--- a/client/index.html
+++ b/client/index.html
@@ -319,8 +319,28 @@
 					let date = new Date(message.messages[i].date);
 					let dateString = `${date.getMonth() + 1}/${date.getDate()}/${date.getFullYear().toString().substring(2)}, ${date.getHours() > 12 ? date.getHours() - 12 : date.getHours()}:${date.getMinutes().toString().length == 2 ? date.getMinutes() : "0" + date.getMinutes()} ${date.getHours() > 12 ? "PM" : "AM"}`;
 
+					let factionMessage = "";
+
+					// not village
+					if (message.messages[i].permission != "everyone") {
+						// specific night chat and not with moderator
+						if (message.messages[i].permission.substring(0, 5) != "user:") {
+							factionMessage = `(To the ${message.messages[i].permission})`;
+						} else {
+							// privately from moderator
+							if (message.messages[i].sender == "Moderator") {
+								factionMessage = "(Privately)";
+							} else {
+								// from player to moderator
+								factionMessage = "(To the Moderator)";
+							}
+						}
+					}
+
+					console.log(factionMessage);
+
 					// shows each message
-					chat.innerHTML += `<div><span style="background-color: white; color: #262626">${message.messages[i].sender} (${dateString})</span><br><span>${message.messages[i].message}</span><br><br></div>`;
+					chat.innerHTML += `<div><span style="background-color: ${message.messages[i].permission == "everyone" ? "white" : "red"}; color: #262626">${message.messages[i].sender} ${factionMessage} (${dateString})</span><br><span style="color: ${message.messages[i].permission == "everyone" ? "white" : "red"};">${message.messages[i].message}</span><br><br></div>`;
 
 				}
 
