--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,13 @@
 			height: 25;
 		}
 	</style>
-	<title>Game Template | ArjhanToteck</title>
+	<title>Blackjack Online | ArjhanToteck</title>
 	<link rel="icon" href="/favicon.png">
 	<link href="https://arjhantoteck.vercel.app/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
-	<h1 class="glitch" id="heading" data-text="Game Template ">Game Template </h1>
+	<h1 class="glitch" id="heading" data-text="Blackjack Online">Blackjack Online</h1>
 	<div id="menu">
 		<br>
 		<button onclick="hostGameMenu.style.display = 'block'; joinGameMenu.style.display = 'none'; document.onkeydown = function(event){if(event.key == 'Enter') startGame()}; hostGameUsername.focus();">Host Game</button>
