Update and rename about.html to credits.html

--- a/client/credits.html
+++ b/client/credits.html
@@ -11,15 +11,14 @@
 
 		gtag('config', 'G-68J35F2R6N');
 	</script>
-
-	<link href="https://arjhantoteck.vercel.app/style.css" rel="stylesheet" type="text/css" media="all">
-	<title>About | Online Game Template | ArjhanToteck</title>
+	<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+	<title>Credits | Blackjack Online | ArjhanToteck</title>
 	<link rel="icon" href="/favicon.png">
 </head>
 
-<h1 data-text="About" class="glitch">About</h1>
+<h1 data-text="Credits" class="glitch">Credits</h1>
 
-This is an open-source template for a simple online game that anyonce is allowed to use. This template is based off of <a href="/werewolf/">Werewolf</a>, which is also open source. This template is available under the MIT licnese (see below) and can be found on <a href="https://github.com/ArjhanToteck/Simple-Online-Game-Template">GitHub</a> along with the server files.
+The entirety of this game was programmed and created by me, <a href="/">ArjhanToteck</a> and is open source on <a href="https://github.com/ArjhanToteck/Blackjack-Online">GitHub</a> under the MIT License, which a copy of is available below.
 
 <br>
 <br>
